Version 1.4203: Sat Mar 28 2015
- Make test script more compatible with automated testing

Version 1.4202: Sun Mar 22 2015
- Moved code to github
- Added POD test

Version 1.4201 Tue Jul 15 2008:
- Updated to the latest version of Module::Install
- Removed auto-install for better compatibility with CPAN and others
- Cleaned up the contradictory licensing. (Now just GPL instead of GPL in one
	place, Perl artistic in another, "all rights reserved" in yet another.)
- Moved hosting to Google Code

Version 1.4200 Mon Mar 14 2005:
- Fixed a bug where the user-specified max cache size was not being honored,
  and an unbounded cache was used instead. (Thanks to Christoph C. Cemper
  <cgicache@cemper.com> for finding the bug and providing the fix.)
- Fixed a bug where the default_expires_in time interval was not being set
  correctly.
- Changed the default behavior of default_expires_in so that cache entries
  never expire.

Version 1.4142:
- Fixed a bug in t/timed_tests.t that would be revealed by Perl 5.6.x. (Thanks
  to Sebastien Aperghis-Tramoni <saper@cpan.org> for the bug report and
  debugging assistance.)
- Improved test reporting for, and robustness of, t/timed_tests.t

Version 1.4141: wed Dec 22 2004
- Fixed a bug in timed testing (Thanks to <nothingmuch@woobling.org> for the
  bug report.)

Version 1.4140: Tue Dec 21 2004
- Improved test failure reporting
- Fixed version numbers, which were incompatible with some modules. (Thanks to
  Tassilo von Parseval <tassilo.von.parseval@rwth-aachen.de> for the bug
  report)
- Fixed some warnings and bugs in the two test cases.

Version 1.41.3: Tue Sep 21 2004
- Broke up test scripts
- Switched to Test::More for better test reporting

Version 1.41.2: Thu Sep 16 2004
- Fixed broken dependency specification in Makefile.PL
- Added missing inc/ files

Version 1.41.1: Wed Sep 15 2004
- Fixed module and changelog bug, where clear_cache() was clear() (William Kern
  <wkern@pixelgate.net> reported this.)