@@ -46,8 +46,8 @@ EOF
   my $expected_cached = "Test output 1\n";
   my $message = 'invalidate_cache_entry() setup';
 
-  Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-    $expected_cached, $message, 1);
+  Init_For_Run($test_script_name, $script, 1);
+  Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 }
 
 # Now run a script that invalidates the previous cached content before
@@ -77,8 +77,8 @@ EOF
   my $expected_cached = "Test output 2\n";
   my $message = 'invalidate_cache_entry() operation';
 
-  Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-    $expected_cached, $message, 1);
+  Init_For_Run($test_script_name, $script, 1);
+  Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 }
 
 $script_number++;
