@@ -43,8 +43,8 @@ my $expected_stderr = "Forced die!\n";
 my $expected_cached = undef;
 my $message = 'die() prevents caching';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
@@ -80,8 +80,8 @@ my $expected_stderr = "STDERR!\n";
 my $expected_cached = undef;
 my $message = 'Print to STDERR prevents caching';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
@@ -119,8 +119,8 @@ my $expected_stderr = "";
 my $expected_cached = undef;
 my $message = 'redirected die() prevents caching';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
@@ -160,8 +160,8 @@ my $expected_stderr = "Forced die!\n";
 my $expected_cached = undef;
 my $message = 'die() (with filehandles) prevents caching';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
