@@ -45,8 +45,8 @@ my $expected_stderr = '';
 my $expected_cached = "Test output 1\nTest output 2\n";
 my $message = 'pause() and continue()';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
@@ -83,8 +83,8 @@ my $expected_stderr = '';
 my $expected_cached = "Test output 1\nTest output 2\n";
 my $message = 'pause() and continue() with filehandles';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
