@@ -1,14 +1,20 @@
-use Test::More tests => 21;
+use Test::More;
 
 use strict;
 use lib 't';
 use Test::Utils;
 use File::Path;
 use CGI::Cache;
+use Benchmark::Timer;
 
 use vars qw( $VERSION );
 
 $VERSION = sprintf "%d.%02d%02d", q/0.10.2/ =~ /(\d+)/g;
+
+BEGIN
+{
+  die "Need Benchmark::Timer 0.6 or higher" unless $Benchmark::Timer::VERSION >= 0.6;
+}
 
 # ----------------------------------------------------------------------------
 
@@ -25,38 +31,56 @@ sub Time_Script
   
   my $test_script_name = "t/cgi_test.cgi";
   
-  #  First run should take longer & create cache file
-  my $t1 = time;
+  my $t = Benchmark::Timer->new(skip => 1, confidence => 95, error => 5, minimum => 3);
+  my $total_tests = 0;
 
-  # Three tests in Run_Script
-  Run_Script($test_script_name, $script, $expected_stdout, '', '<SKIP>',
-    "$message (first run)", 1);
+  while($t->need_more_samples('first run')) {
+    Init_For_Run($test_script_name, $script, 1);
+
+    $t->start('first run');
+
+    # Three tests in Run_Script
+    Run_Script($test_script_name, $expected_stdout, '', '<SKIP>', "$message (first run)");
+    $total_tests += 3;
   
-  $t1 = time - $t1;
-    
+    $t->stop('first run');
+  }
+
+  my $t1 = $t->result('first run');
     
   #  Second run should be short, but return output from cache
-  my $t2 = time;
+  while($t->need_more_samples('second run')) {
+    Init_For_Run($test_script_name, $script, 0);
 
-  # Three tests in Run_Script
-  Run_Script($test_script_name, $script, $expected_stdout, '', '<SKIP>',
-    "$message (second run)", 0);
+    $t->start('second run');
 
-  $t2 = time - $t2;
+    # Three tests in Run_Script
+    Run_Script($test_script_name, $expected_stdout, '', '<SKIP>', "$message (second run)");
+    $total_tests += 3;
+  
+    $t->stop('second run');
+  }
+
+  my $t2 = $t->result('second run');
 
   #  Do a cursory check to see that it was at least a little
   #  faster with the cached file, only if $t2 != 0;
   SKIP: {
     skip "Both runs were too fast to compare", 1 if $t2 == 0 && $t1 == 0;
 
-    ok($t2 == 0 || $t1/$t2 >= 1.5, "$message: Caching run was faster");
+    ok($t2 == 0 || $t1/$t2 >= 1.5, "$message: Caching run was faster -- $t2 versus $t1");
+    $total_tests += 1;
   }
+
+  return $total_tests;
 }
 
 # ---------------------------------------------------------------------------
 
+my $total_tests = 0;
+
 # Test 1-7: caching with default attributes
-Time_Script(<<'EOF',"Test output 1\n","Default attributes");
+$total_tests += Time_Script(<<'EOF',"Test output 1\n","Default attributes");
 use CGI::Cache;
 
 CGI::Cache::setup({ cache_options => { cache_root => 't/CGI_Cache_tempdir' } });
@@ -75,7 +99,7 @@ rmtree 't/CGI_Cache_tempdir';
 
 # Test 8-14: caching with some custom attributes, and with a complex data
 # structure
-Time_Script(<<'EOF',"Test output 2\n","Custom attributes");
+$total_tests += Time_Script(<<'EOF',"Test output 2\n","Custom attributes");
 use CGI::Cache;
 
 CGI::Cache::setup( { cache_options => { 
@@ -98,7 +122,7 @@ rmtree 't/CGI_Cache_tempdir';
 # ----------------------------------------------------------------------------
 
 # Test 15-21 caching with default attributes. (set handles)
-Time_Script(<<'EOF',"Test output 1\n","Set handles");
+$total_tests += Time_Script(<<'EOF',"Test output 1\n","Set handles");
 use CGI::Cache;
 
 CGI::Cache::setup( { cache_options => { cache_root => 't/CGI_Cache_tempdir' },
@@ -116,3 +140,5 @@ EOF
 
 # Clean up
 rmtree 't/CGI_Cache_tempdir';
+
+done_testing($total_tests);
