@@ -60,8 +60,8 @@ my $expected_stderr = '';
 my $expected_cached = "Test output 1\n";
 my $message = 'Output to non-STDOUT filehandle';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
@@ -106,8 +106,8 @@ my $expected_stderr = '';
 my $expected_cached = "Test output 1\n";
 my $message = 'Monitor non-STDOUT filehandle';
 
-Run_Script($test_script_name, $script, $expected_stdout, $expected_stderr,
-  $expected_cached, $message, 1);
+Init_For_Run($test_script_name, $script, 1);
+Run_Script($test_script_name, $expected_stdout, $expected_stderr, $expected_cached, $message);
 
 $script_number++;
 
